tests/paczka1/small_fuzzy/24413196.err
Error in line 5: VWhRh34AG7 A290 65,4
Error in line 8: VWhRh34AG7 S660 24,5
Error in line 14: VWhRh34AG7 A209 41,4
